[package]
name = "cloudflare-worker-analytics"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker for traffic analytics"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http'] }
worker-macros = { version = "0.8", features = ['http'] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
